[udp-relay] Feature: Initial Implementation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,9 @@ name = "udp-echo"
 [[bin]]
 name = "udp-pktgen"
 
+[[bin]]
+name = "udp-relay"
+
 [dependencies]
 anyhow = "1.0.53"
 clap = "3.0.13"
