start of kv-store app. Much of the structure so far is taken from the other example apps. Still have to figure out/implement how to have the key-value store able to be broken up for later pinning/registering different blocks of memory

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,9 @@ name = "udp-pktgen"
 [[bin]]
 name = "udp-relay"
 
+[[bin]]
+name = "kv-store"
+
 [dependencies]
 anyhow = "1.0.58"
 clap = "3.2.12"
