--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,9 @@ name = "udp-dump"
 name = "udp-echo"
 
 [[bin]]
+name = "udp-echo2"
+
+[[bin]]
 name = "udp-pktgen"
 
 [[bin]]
@@ -38,6 +41,7 @@ anyhow = "1.0.57"
 clap = "3.1.18"
 libc = "0.2.126"
 log = "0.4.17"
+core_affinity = "0.5.10"
 
 demikernel = { git = "https://github.com/demikernel/demikernel", branch = "wip-feature-multicore" } 
 
